# fastapi-auth

./: README.md  pyproject.toml
src/: emails.py  main.py  settings.py  utils.py
src/api/: dependencies.py
src/api/api_v1/: __init__.py
src/api/api_v1/endpoints/: auth.py
src/database/: engine.py  session.py
src/database/migrations/: env.py
src/database/migrations/versions/: 6b203021f988_create_user.py
src/email_templates/: mfa_message.txt
src/models/: __init__.py  base.py  user.py
src/schemas/: __init__.py  jwt_claims.py  response_acess_token.py  response_message.py  user.py
src/security/: password.py
src/security/jwt/: __init__.py  blacklist.py  mission.py  serialization.py
src/services/: users.py
